fixed top part visibility

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
-  margin: 25px 20px;
+  margin: 0px 10px;
   background-color: #f5f7fb;
-  height: 90vh;
+  min-height: 90vh;
   display: flex;
   justify-content: center;
   align-items: center;
